--- a/Renault/formulario_renault.html
+++ b/Renault/formulario_renault.html
@@ -611,7 +611,7 @@
                     <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/oCIr3ue.png" style="height:65px; width: 234px; text-decoration: none; border-radius:0px; margin-top:50px; margin-left: 0px;
     box-shadow:0 0 0px 0px #fff; margin-bottom: -5px;"></span>
 
-    <span style="bottom:10px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/7SiWcRG.png" style="height:60px; width: 210px; text-decoration: none; border-radius:0px; margin-top:40px; margin-left: 0px;
+    <span style="bottom:10px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/WSowOGh.png" style="height:60px; width: 210px; text-decoration: none; border-radius:0px; margin-top:40px; margin-left: 0px;
     box-shadow:0 0 0px 0px #fff; margin-bottom: 20px;"></span>
 
                     
@@ -645,12 +645,12 @@
 
                 <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: -40px;">
 
-                    <img src="https://i.imgur.com/hUPRPyN.png" style=" width: 320px;height:150px; text-decoration: none;">
+                    <img src="https://i.imgur.com/rDQP8ON.png" style=" width: 320px;height:150px; text-decoration: none;">
                 </span>
 
                 <span class="s-III" style="margin-top: -40px;">
                 <a href="https://www.renault.com.mx/test_drive_manejo.html" target="_blank">
-                    <input type="button" name="send" id="send" style="text-align: center; background-color:#ffce00; color: black; border: none; border-radius: 2px; width: 230px; cursor: pointer" value="VISITA NUESTRA WEBSITE">
+                    <input type="button" name="send" id="send" style="text-align: center; background-color:#ffce00; color: black; border: none; border-radius: 2px; width: 230px; cursor: pointer" value="VISITA NUESTRA WEB">
                 </a>
                 </span>
                     </center>
