--- a/DIA DE LOS MUERTOS/FORMATO ANIMADO FADE.html
+++ b/DIA DE LOS MUERTOS/FORMATO ANIMADO FADE.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <head>
-<title>FORMATO ANIMADO 3D CUBE</title>
 
-<div class="column">
-<h5>Formato Animado Fade</h5>
+
+ <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
+    <title>Fade</title>
+
+    <style type="text/css">
+    	
+    	.MexicoDead p{margin:0px}.MexicoDead .bg.cover-1,.MexicoDead .bg.cover-2,.MexicoDead .bg.cover-3,.MexicoDead{background-size:cover}.MexicoDead .btn{margin-top:0;padding-left:0}.MexicoDead a,.MexicoDead a:hover{text-decoration:none;color:#fff}.MexicoDead .bzm_wrapper{position:relative;overflow:hidden;color:#000;font-family:Source Sans Pro}.MexicoDead .bzm_wrapper.size_300x250{width:300px;height:250px;background-color:#FFF}.MexicoDead .bzm_cover,.MexicoDead .carousel-wrapper{position:relative;width:100%}.MexicoDead .bzm_cover{height:150px}.MexicoDead .bg.cover-1{background-image:url(https://i.imgur.com/f9GxdCD.png)}.MexicoDead .bg.cover-2{background-image:url(https://i.imgur.com/rjbYo3p.png)}.MexicoDead .bg.cover-3{background-image:url(https://i.imgur.com/Cg8gKaB.png)}.MexicoDead .bzm_cover.bzm_pos_tl{top:3%;left:3%}.MexicoDead .bzm_pos_tr{top:3%;right:3%}.MexicoDead .bzm_pos_bl{bottom:3%;left:3%}.MexicoDead .bzm_pos_br{bottom:3%;right:3%}.MexicoDead .bzm_pos_bm{bottom:3%;left:calc(100% - 70%)}.MexicoDead .bzm_text{padding:6px 0 0 .3em;line-height:1.1;color:#000}.MexicoDead .bzm_text_title{font-size:14px;color:#000}.MexicoDead .bzm_text_light{font-size:10px;font-weight:0}.MexicoDead .bzm_text_medium{font-size:16px;font-weight:400;line-height:1.4}.MexicoDead .bzm_text_bold{font-size:24px;font-weight:700;line-height:1}.MexicoDead .bzm_text_small{font-size:10px;line-height:1}.MexicoDead .carousel-wrapper{height:auto;margin:0 auto}.MexicoDead .carousel-item1{position:absolute;opacity:0;transition:all .5s ease-in-out}.MexicoDead [id^=item]{display:none}.MexicoDead .item-1{z-index:2;opacity:1;animation:fade 29s infinite;-webkit-animation:fade 29s infinite}.MexicoDead .item-2{animation:fade2 29s infinite;-webkit-animation:fade2 29s infinite}.MexicoDead .item-3{animation:fade3 29s infinite;-webkit-animation:fade3 29s infinite}@keyframes fade{0%,100%{opacity:1}25%,50%,50%{opacity:0}}@keyframes fade2{0%,100%,50%,50%{opacity:0}25%{opacity:1}}@keyframes fade3{0%,100%,25%,50%{opacity:0}50%{opacity:1}}.MexicoDead .bzm_button{position:absolute;bottom:7px;left:3%;text-transform:uppercase;background-color:#6cbd44;color:#fff;border-radius:50%;padding:4px;text-align:center;font-size:90%;cursor:pointer}.MexicoDead .bzm_button:hover{background-color:#579e38}.MexicoDead .carousel-container{width:300px;height:150px;overflow-y:hidden}.MexicoDead #botones-para-compartir{text-align:right}.likedini:hover,.facebooki:hover,.twitteri:hover,.googlei:hover,.pinteresti:hover{border-radius:25px 25px 25px 25px;transition:all .3s ease-out;box-shadow:0px 0px 5px #000;-moz-transition:all .5s;-webkit-transition:all .5s;-o-transition:all .5s}.likedini,.facebooki,.twitteri,.googlei,.pinteresti{transition:all .3s ease-out;-moz-transition:all .5s;-webkit-transition:all .5s;-o-transition:all .5s}.MexicoDead .logo{width:39%;z-index:2;background-color:#3763a7;border-radius:4px;float:right;height:30px;text-align:center;margin-top:-35px}
+    </style>
 <div class="MexicoDead">
 <div class="bzm_wrapper carousel-wrapper size_300x250">
 <div class="carousel-container">
