--- a/DIA DE LOS MUERTOS/FORMATO ANIMADO FADE.html
+++ b/DIA DE LOS MUERTOS/FORMATO ANIMADO FADE.html
@@ -14,6 +14,7 @@
     </style>
 <div class="MexicoDead">
 <div class="bzm_wrapper carousel-wrapper size_300x250">
+	<a href="https://www.visitmexico.com/dia-de-muertos/es/destinos/oaxaca" target="_blank">
 <div class="carousel-container">
 <div class="bzm_cover bg cover-1 carousel-item1 item-1"> </div>
 <div class="bzm_cover bg cover-2 carousel-item1 item-2"> </div>
@@ -23,5 +24,6 @@
 <div style="bottom: 0px; height: 18px; text-align: right; margin-top: -6px;"><img style="height: 19px;" src="https://i.imgur.com/oUNsZpR.png" /></div>
 <p> </p>
 </div>
+</a>
 </div>
 </div>
