--- a/DIA DE LOS MUERTOS/FORMATO NATIVO STORYTELLING.html
+++ b/DIA DE LOS MUERTOS/FORMATO NATIVO STORYTELLING.html
@@ -14,22 +14,26 @@
 <div class="bzm_wrapper carousel-wrapper size_320x480">
 <div class="context">
 <div class="carousel-container">
+	<a href="https://www.visitmexico.com/dia-de-muertos/es" target="_blank">
 <div class="bzm_cover bg cover-1 carousel-item1 item-1">&nbsp;</div>
 <div class="bzm_cover bg cover-2 carousel-item1 item-2">&nbsp;</div>
 <div class="bzm_cover bg cover-3 carousel-item1 item-3">&nbsp;</div>
-</div>
+</div></a>
 <p>&nbsp;</p>
 <div class="bzm_text"><a style="display: block;" href="https://www.visitmexico.com/dia-de-muertos/es" target="_blank" rel="noopener"><span class="bzm_text_title bzm_text_bold" style="color: #000; line-height: 1; font-size: 19px;">Vive el día de los muertos en México</span></a><span class="bzm_text_title bzm_text_medium" style="display: block; color: #000; margin-top: -7px; margin-bottom: 8px; padding-top: 30px;"> <i>El culto a la muerte en México no es algo nuevo, pues los orígenes de la celebración del Día de Muertos en esta región son anteriores a la llegada de los españoles.<br><br>Las festividades varían de pueblo a pueblo, pero todos tienen un principio común: la familia se reúne para dar la bienvenida a las ánimas, colocar los altares y las ofrendas, visitar el cementerio,arreglar las tumbas... <br><br>Sé parte de la historia; y descubre los rituales, las fiestas y tradiciones de estas fechas. No te lo pierdas!</i> </span></div>
 <div class="bzm_text">
-<div style="background-image: url('https://i.imgur.com/RI7ZAH3.png'); background-size: cover; width: 315px; height: 150px;">&nbsp;</div>
+	<a href="https://www.visitmexico.com/dia-de-muertos/es" target="_blank">
+<div  style="background-image: url('https://i.imgur.com/RI7ZAH3.png'); background-size: cover; width: 315px; height: 150px;">&nbsp;</div></a>
 <p><a style="display: block;" href="https://www.visitmexico.com/dia-de-muertos/es/destinos/chiapas" target="_blank" rel="noopener"><span class="bzm_text_title bzm_text_bold" style="color: #000; line-height: 1;"><br>¿A dónde ir y qué hacer en Chiapas en estas fechas?</span></a> <span class="bzm_text_title bzm_text_medium" style="display: block; color: #000;"><br><i>En cada región del Estado de Chiapas la celebración del día de muertos tiene un matiz diferente. <br><br>Te aconsejamos no perder la visita a los panteones de San Juan Chamula y Zinacantán, comunidades mayas que te sorprenderán con el colorido de sus flores y tradiciones ancestrales.<br><br>Para comer no te pierdas la gran variedad de tamales, pan, dulces típicos como dulces de yema, gaznates, y frutas en curtido.</i></span></p>
 </div>
 <div class="bzm_text">
-<div style="background-image: url('https://i.imgur.com/rjbYo3p.png'); background-size: cover; width: 315px; height: 150px;">&nbsp;</div>
+	<a href="https://www.visitmexico.com/dia-de-muertos/es" target="_blank">
+<div style="background-image: url('https://i.imgur.com/rjbYo3p.png'); background-size: cover; width: 315px; height: 150px;">&nbsp;</div></a>
 <p><a style="display: block;" href="https://www.visitmexico.com/dia-de-muertos/es/destinos/oaxaca" target="_blank" rel="noopener"><span class="bzm_text_title bzm_text_bold" style="color: #000; line-height: 1;"><br>Oaxaca también se viste de música y colores.</span></a> <span class="bzm_text_title bzm_text_medium" style="display: block; color: #000; margin-top: 5px; margin-bottom: 5px;"><br><i>El Día de Muertos en Oaxaca está lleno de misticismo y religiosidad; es la fecha en que se invita a los finados a retornar a su hogar atraídos por sus antiguas pertenencias o por el amor de sus familiares y amigos.<br><br>También existen las comparsas, grupos de músicos que recorren las casas por la noche de Día de Muertos para cantar y rezar algunas oraciones de rodillas ante cada uno de los altares de muertos.</i></span></p>
 </div>
 <div class="bzm_text">
-<div style="background-image: url('https://i.imgur.com/TYNoQMx.png'); background-size: cover; width: 315px; height: 150px;">&nbsp;</div>
+	<a href="https://www.visitmexico.com/dia-de-muertos/es" target="_blank">
+<div style="background-image: url('https://i.imgur.com/TYNoQMx.png'); background-size: cover; width: 315px; height: 150px;">&nbsp;</div></a>
 <p><a style="display: block;" href="https://www.visitmexico.com/dia-de-muertos/es/destinos/tabasco" target="_blank" rel="noopener"> <span class="bzm_text_title bzm_text_bold" style="color: #000; line-height: 1;"><br>En Tabasco...siente el arte a flor de piel!</span> </a> <span class="bzm_text_title bzm_text_medium" style="display: block; color: #000; margin-top: 5px; margin-bottom: 5px;"><br><i>En Tabasco la celebración es más artística, se lleva a cabo un concurso con los pintores de las diferentes regiones para decorar las faldas de catrinas gigantes las cuales son exhibidas en la plaza central de Villahermosa por más de un mes.</i><br></span></p>
 </div>
 <div style="text-align: right; background-color: white; background-size: 25px; height: 50px; left: 0; bottom: 0;"><a style="line-height: 31px;" href="https://www.visitmexico.com/dia-de-muertos/es" target="_blank" rel="noopener"> <img style="height: 25px; float: right;" src="https://i.imgur.com/oUNsZpR.png"> </a></div>
