--- a/LOREAL/FadeBig2.html
+++ b/LOREAL/FadeBig2.html
@@ -129,10 +129,10 @@
 
         .tgx_text {
             position: absolute;
-            top: 78%;
-            left: 7.5px;
-            width: 91%;
-            padding: 0.3em;
+            top: 79%;
+            left: 4.0px;
+            width: 96%;
+            padding: 0.1em;
             line-height: 1.1em;
             color: #453936;
             font-family: Trebuchet MS;
@@ -361,7 +361,7 @@
             </span>
             <br/>
              <span class="tgx_text tgx_text_small" style="margin-top:-10px;">
-                <p>La glicerina puede derivarse de forma natural de plantas y animales o fabricarse sintéticamente.</p>
+                <p>Es un ingrediente muy peculiar ya que si es 100% pura es muy deshidratante, pero combinada con agua ayuda a suavizar e hidratar la piel.</p>
             </span>
   
             </div>
