--- a/LOREAL/venetian2.html
+++ b/LOREAL/venetian2.html
@@ -2143,13 +2143,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(231px, 449px) rotate(0deg);
 }
 /*#/#*//*#i88.text.css:text/base/css*/
-#i88 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i88 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i88.i89.positioning.css:positioning/base/css.2*/
 #i88 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 267px; height: 51px;
-        -ms-transform: translate(0, 0) translate(27px, 352px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(27px, 352px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(27px, 352px) rotate(0deg);
-        transform: translate(0, 0) translate(27px, 352px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(27px, 349px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(27px, 349px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(27px, 349px) rotate(0deg);
+        transform: translate(0, 0) translate(27px, 349px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2180,20 +2180,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i90.text.css:text/base/css*/
-#i90 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i90 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i90.i91.positioning.css:positioning/base/css.2*/
-#i90 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 288px; height: 61px;
-        -ms-transform: translate(0, 0) translate(16px, 399px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 399px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 399px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 399px) rotate(0deg);
+#i90 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 287px; height: 61px;
+        -ms-transform: translate(0, 0) translate(16px, 395px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 395px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 395px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 395px) rotate(0deg);
 }
 /*#/#*//*#i94.i95.positioning.css:positioning/base/css.2*/
-#i94 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 165px; height: 44px;
-        -ms-transform: translate(0, 0) translate(78px, 306px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(78px, 306px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(78px, 306px) rotate(0deg);
-        transform: translate(0, 0) translate(78px, 306px) rotate(0deg);
+#i94 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 184px; height: 49px;
+        -ms-transform: translate(0, 0) translate(64px, 298px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(64px, 298px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(64px, 298px) rotate(0deg);
+        transform: translate(0, 0) translate(64px, 298px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2280,7 +2280,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/QUkq5rf.gif"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/ZradtYG.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/Ay2sJ39.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/BZuIzVQ.jpg"></dataimg>
 <!--#/#-->
@@ -2441,7 +2441,7 @@ customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: QUkq5rf.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: ZradtYG.jpg; fileId: ; sourceTypeId: externalUrl;
+name: Ay2sJ39.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: BZuIzVQ.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
