--- a/SAN JACINTO/Venetian.html
+++ b/SAN JACINTO/Venetian.html
@@ -2190,13 +2190,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 257px; height: 123px;
-        -ms-transform: translate(0, 0) translate(19px, 504px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(19px, 504px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(19px, 504px) rotate(0deg);
-        transform: translate(0, 0) translate(19px, 504px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(22px, 504px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(22px, 504px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(22px, 504px) rotate(0deg);
+        transform: translate(0, 0) translate(22px, 504px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
