--- a/H&M video/VideoInteractivoURLdirectoConEventos.html
+++ b/H&M video/VideoInteractivoURLdirectoConEventos.html
@@ -11,7 +11,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
         <script>
-            var videoUrl = "https://www.youtube.com/embed/xPu9lPlEs4M?autohide=2&modestbranding=1&controls=2&showinfo=0&fs=0&rel=0&disablekb=1&cc_load_policy=0";
+            var videoUrl = "https://www.youtube.com/embed/xPu9lPlEs4M?autohide=2&modestbranding=1&controls=2&showinfo=0&fs=0&rel=0&disablekb=1&cc_load_policy=0&playsinline=1";
             var linkRedirect = 'https://www2.hm.com/en_us/free-form-campaigns/1079-studio-2019.html#intro';
             var config = [
                 {
