--- a/Mindtech/formulario-def.html
+++ b/Mindtech/formulario-def.html
@@ -625,7 +625,7 @@
 
                     <!--<h2>CONTÁCTANOS</h2>-->
                     
-                    <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="NOMBRES" name="name" type="text" ></p>
+                    <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="NOMBRE" name="name" type="text" ></p>
                     <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="APELLIDOS" name="lastName" type="text" ></p>
                     <p style="width: 100%; text-align: left; margin-bottom: -12px;"  ><input placeholder="TELÉFONO" name="phone" ></p>
                    <p style="width: 100%; text-align: left; margin-bottom: -12px;" ><input placeholder="EMAIL" name="email" type="email" ></p>
@@ -665,7 +665,7 @@
 
                 <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: 100px;">
 
-                    <img src="https://i.imgur.com/Z0AA5Gj.png" style="height:130px; width: 300px; text-decoration: none; margin-left: -10PX;">
+                    <img src="https://i.imgur.com/b8hV8GO.png" style="height:130px; width: 300px; text-decoration: none; margin-left: -10PX;">
                 </span>
 
                 <span class="s-III" style="margin-top: -200px;">
