--- a/SAN JACINTO/FadeBig.html
+++ b/SAN JACINTO/FadeBig.html
@@ -73,7 +73,7 @@
        }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/lHm1OWA.jpg");
+            background: url("https://i.imgur.com/zQTVpcI.jpg");
             background-size: cover;
             
         }
