--- a/Supervia2/Cube.html
+++ b/Supervia2/Cube.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+<meta charset="UTF-8">
+
 <title>HTML5 STUDIO BUILDER: 3D Box v 1.5</title>
 
 <!-- Adform API Script -->
@@ -699,7 +701,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
 }
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 305px; height: 160px;
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
         -ms-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
@@ -816,7 +818,7 @@ Mejor vete por la Supervía.</div>
 <!--#/#--><!--#i5.i366.text.html:text/html-->
 <div id="i366">En Supervía tu seguridad es primero.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/Gt1xhsm.png"/>
+<img id="i58" src="https://i.imgur.com/gtrxSuf.jpg"/>
 <!--#/#--><!--#i5.i434.image.html:image/html-->
 <img id="i434" src="https://i.imgur.com/rw3Ds7O.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
