--- a/Mustela2/Mustela_Venetian_300x600_2caras.html
+++ b/Mustela2/Mustela_Venetian_300x600_2caras.html
@@ -2264,7 +2264,7 @@ url('fonts/') format('svg');
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Rita la abestia nutre profundamente la piel seca.</div>
+<div id="i7">Rita la avejita nutre profundamente la piel seca.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/fXufijj.jpg"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
@@ -2382,7 +2382,7 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Rita la abestia nutre profundamente la piel seca.; customName: false;
+name: Rita la avejita nutre profundamente la piel seca.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
