--- a/Mustela2/Cube2.html
+++ b/Mustela2/Cube2.html
@@ -446,7 +446,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i19.i98.image.html:image/html-->
 <img id="i98" src="https://i.imgur.com/fXufijj.jpg"/>
 <!--#/#--><!--#i19.i104.text.html:text/html-->
-<div id="i104">Imanol el girasol protege, calma y redepiliza la piel atópica.</div>
+<div id="i104">Imanol el girasol protege, calma y reepiteliza la piel atópica.</div>
 <!--#/#--><!--#i19.i82.shape.html:shape/html-->
 <div id="i82"></div>
 <!--#/#-->
@@ -494,7 +494,7 @@ var cube_i4 = new Adform.FlexGallery({
     paddingForButtons: '0',
     perspective: '800',
     animationDirection: 'horizontal',
-    animationDuration: '0.8',
+    animationDuration: '1',
     autoAnimationEnabled: 'true',
     autoAnimationDelay: '2.2',
     autoAnimationTime: '9999',
@@ -679,7 +679,7 @@ customName: false;
 /*#/#*//*#i98.i99.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i19.i104.text.meta:text/meta*/
-name: Imanol el girasol protege, calma y redepiliza la piel atópica.; customName: false;
+name: Imanol el girasol protege, calma y reepiteliza la piel atópica.; customName: false;
 /*#/#*//*#i104.i105.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i19.i82.shape.meta:shape/meta*/
