--- a/Mustela2/ZoomExp300x600.html
+++ b/Mustela2/ZoomExp300x600.html
@@ -180,7 +180,7 @@ a {text-decoration: none;}
 </div>
 
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:#000000; font-size:19px;  text-decoration: none;"> Imanol el girasol protege, calma y redepiliza la piel atópica.</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:#000000; font-size:19px;  text-decoration: none;"> Imanol el girasol protege, calma y reepiteliza la piel atópica.</span><br>
     
 
                  
