--- a/Kate-Spade/Venetian.html
+++ b/Kate-Spade/Venetian.html
@@ -2285,7 +2285,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i44.image.html:image/html-->
 <img id="i44" src="https://i.imgur.com/FKcTsrQ.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/w9D3Kaw.png"/>
+<img id="i46" src="https://i.imgur.com/6aJkZTI.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/E4t8rjj.png"/>
 <!--#/#--><!--#i108.text.html:text/html-->
