--- a/Kate-Spade/fade-small.html
+++ b/Kate-Spade/fade-small.html
@@ -273,7 +273,7 @@
 
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
         <div class="cta"> <a href="https://goo.gl/maps/2SLHeT8DpoUg3f5C7" target="_blank">
-    <img src="https://i.imgur.com/w9D3Kaw.png" style="height: 39px;"></a></div>   
+    <img src="https://i.imgur.com/6aJkZTI.png" style="height: 39px;"></a></div>   
 
         <a href="https://goo.gl/maps/2SLHeT8DpoUg3f5C7" target="_blank">
             <div class="carousel-container">
