--- a/Kate-Spade/Venetian.html
+++ b/Kate-Spade/Venetian.html
@@ -2289,7 +2289,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/E4t8rjj.png"/>
 <!--#/#--><!--#i108.text.html:text/html-->
-<div id="i108">la guía de regalos para mamá de kate spade New York.</div>
+<div id="i108">la guía de regalos para mamá de kate spade new york.</div>
 <!--#/#--><!--#i110.text.html:text/html-->
 <div id="i110">hasta 30% de descuento en artículos seleccionados del 1 al 10 de mayo.</div>
 <!--#/#--><!--#i68.shape.html:shape/html-->
