tam imagen ventana

--- a/Mustela2/circles and modals basic (with screen block, and hosting video) (1).html
+++ b/Mustela2/circles and modals basic (with screen block, and hosting video) (1).html
@@ -175,8 +175,8 @@
                 width: 100%;
             }
             .image-resize {
-                height: 150px !important;
-                width: 200px !important;
+                height: 100%px !important;
+                width: 100%px !important;
             }
             .modal .modal-content .body .column .link {
                 margin-top: -5px;
