--- a/Mustela2/circles and modals basic (with screen block, and hosting video) (1).html
+++ b/Mustela2/circles and modals basic (with screen block, and hosting video) (1).html
@@ -138,8 +138,8 @@
               margin: 5% auto; /* 15% from the top and centered */
               padding: 20px;
               border: 1px solid #888;
-              width: 300px; /* Full width */
-              height: 250px; /* Could be more or less, depending on screen size */
+              width: 180px; /* Full width */
+              height: ; /* Could be more or less, depending on screen size */
             }
 
             /* The Close Button */
