--- a/NESCAFE/Venetian.html
+++ b/NESCAFE/Venetian.html
@@ -2301,7 +2301,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/jhQSUm6.png"/>
 <!--#/#--><!--#i153.text.html:text/html-->
-<div id="i153">Ya sabes qué hacer después de disfrutar de tu bebida de NESCAFÉ® DOLCE GUSTO®?</div>
+<div id="i153">¿Ya sabes qué hacer después de disfrutar de tu bebida de NESCAFÉ® DOLCE GUSTO®?</div>
 <!--#/#--><!--#i155.text.html:text/html-->
 <div id="i155">Súmate a nuestro programa de recolección. Después de utilizar tus cápsulas de Nescafé® Dolce Gusto® sigue estos sencillos pasos</div>
 <!--#/#--><!--#i157.text.html:text/html-->
@@ -2421,7 +2421,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i149.i150.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://ecolana.com.mx/ecomapa/blog-capsulas.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2485,7 +2485,7 @@ customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i153.text.meta:text/meta*/
-name: Ya sabes qué hacer después de disfrutar de tu bebida de NESCAFÉ® DOLCE GUSTO®?; customName: false;
+name: ¿Ya sabes qué hacer después de disfrutar de tu bebida de NESCAFÉ® DOLCE GUSTO®?; customName: false;
 /*#/#*//*#i153.i154.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i155.text.meta:text/meta*/
