--- a/Kate-Spade/fade-small.html
+++ b/Kate-Spade/fade-small.html
@@ -121,7 +121,7 @@
         .fadesmall .bzm_text_title {
             color: #000;
             width:95%;
-            font-size: 16px;
+            font-size: 18px;
         }
 
         .fadesmall .bzm_text_light {
@@ -282,11 +282,14 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold">hasta 30% de descuento en artículos seleccionados del 1 al 10 de mayo.</span>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold">la guía de regalos para mamá de kate spade new york.</span></br>
+
+<span class="bzm_text_small">
+hasta 30% de descuento en artículos seleccionados del 1 al 10 de mayo.</span>
                 </div>
 
             <!-- LOGO -->
-            <div class="logo"> <img id="logo" src="https://i.imgur.com/E4t8rjj.png"></div>
+            
 
 
                 <!--PARA QUITAR LOS BOTONES SOLO COMENTAR Y CERRAR-->
