--- a/Mustela2/circles and modals basic (with screen block, and hosting video) (1).html
+++ b/Mustela2/circles and modals basic (with screen block, and hosting video) (1).html
@@ -198,6 +198,8 @@
                 margin-right: 30px;
                 font-weight: 700;
                 font-size: 14px;
+                width: 250px;
+                height: ;
                 
             }
             
