--- a/US auto/fijobig.html
+++ b/US auto/fijobig.html
@@ -60,7 +60,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/3qy1HzK.gif");
+            background: url("https://i.imgur.com/idYC0Hg.gif");
             background-size: cover;
         }
 
