--- a/H&M US/FadeBig2.html
+++ b/H&M US/FadeBig2.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
      <link href="https://fonts.googleapis.com/css?family=Trebuchet MS;" rel=stylesheet>
-    <title>Loreal</title>
+    <title>H&M US</title>
    
     <style>
         
