--- a/H&M US/Venetian320x480.html
+++ b/H&M US/Venetian320x480.html
@@ -2229,7 +2229,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/91Xt1H6.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/L8ljDFm.gif"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/1S4hA3X.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
