--- a/H&M US/FadeBig2.html
+++ b/H&M US/FadeBig2.html
@@ -72,7 +72,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/1lqUgZa.gif");
+            background: url("https://i.imgur.com/0DKw9VZ.gif");
             background-size: cover;
             
         }
