--- a/COMIDA US/Venetian.html
+++ b/COMIDA US/Venetian.html
@@ -2304,7 +2304,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/6FCHptq.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Layers of cheese, meat and pasta, Soooo much yes!.</div>
+<div id="i63">Layers of cheese, meat and pasta, soooo much yes!.</div>
 <!--#/#--><!--#i68.text.html:text/html-->
 <div id="i68">Whatever you want on your plate or in your bowl at lunch, we've got it ready for you.</div>
 <!--#/#--><!--#i81.shape.html:shape/html-->
