--- a/Oster/ZoomExp300x600.html
+++ b/Oster/ZoomExp300x600.html
@@ -162,7 +162,7 @@ a {text-decoration: none;}
         <div class="cta"><img id="cta" style="height: 30px;" src="https://i.imgur.com/BIqq9ZG.png"></div>
      
 
-<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 480px; border-radius: none;">
+<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 480px; border-radius: none; cursor: pointer;">
  
 
   <ol>
