--- a/Oster/Cube3b.html
+++ b/Oster/Cube3b.html
@@ -399,7 +399,7 @@ una tarjeta con $150,000 pesos, electrodomésticos y tarjetas con $1,000 pesos a
 <!--#/#--><!--#i41.i80.text.html:text/html-->
 <div id="i80">Registra tu ticket de compra por $1,000 pesos.</div>
 <!--#/#--><!--#i41.i94.image.html:image/html-->
-<img id="i94" src="https://i.imgur.com/kI2vSEF.png"/>
+<img id="i94" src="https://i.imgur.com/qMkw43k.png"/>
 <!--#/#--><!--#i41.i118.shape.html:shape/html-->
 <div id="i118"></div>
 <!--#/#-->
@@ -448,13 +448,13 @@ bmShow('i9');
 bmShow('i60');
 /*#/#*//*#i102.i103.positioning.js:positioning/base/js.2*/
 bmShow('i102');
-/*#/#*//*#i102.i104.actions.js:actions/base/js.1*/
+/*#/#*//*#i102.i206.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i102');
 
 el.addEventListener('click', function(e){
-    /*#i104.i105.actions-clicktag.js:actions-clicktag/base/js.2*/
-   
+    /*#i206.i207.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.osterpromocion.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -617,7 +617,7 @@ name: Registra tu ticket de compra por $1,000 pesos.; customName: false;
 /*#/#*//*#i80.i81.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i41.i94.image.meta:image/meta*/
-name: kI2vSEF.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: qMkw43k.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i94.i95.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
