--- a/Oster/New folder/main/Cube3.html
+++ b/Oster/New folder/main/Cube3.html
@@ -436,7 +436,11 @@ if ('click' === 'click') {
 /* Name: On Click; */
 var el = document.getElementById('i19');
 
-
+el.addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://www.adform.com'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -464,7 +468,11 @@ if ('click' === 'click') {
 /* Name: On Click; */
 var el = document.getElementById('i30');
 
-
+el.addEventListener('click', function(e){
+    /*#i56.i57.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.adform.com'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -492,7 +500,11 @@ if ('click' === 'click') {
 /* Name: On Click; */
 var el = document.getElementById('i41');
 
-
+el.addEventListener('click', function(e){
+    /*#i58.i59.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://www.adform.com'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
