--- a/VICTORIA GOTTI/videobig.html
+++ b/VICTORIA GOTTI/videobig.html
@@ -337,7 +337,7 @@
         <div class="videonew_text"> 
            
             <span class="videonew_text_title videonew_text_bold">
-               Victoria Gotti  <br> La hija de mi padre, Trailer. 
+               Victoria Gotti:  <br> La hija de mi padre, Trailer. 
             </span>
             
             <span class="videonew_text_light videonew_text_small" style="color:black;">
