--- a/NESCAFE/cube.html
+++ b/NESCAFE/cube.html
@@ -926,9 +926,9 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i196.text.html:text/html-->
-<div id="i196">Súmate a nuestro programa de recolección.</div>
+<div id="i196">Súmate a nuestro plan de reciclaje.</div>
 <!--#/#--><!--#i6.i338.image.html:image/html-->
-<img id="i338" src="https://i.imgur.com/zfWB25l.jpg"/>
+<img id="i338" src="https://i.imgur.com/MoMhIEI.jpg"/>
 <!--#/#--><!--#i6.i446.image.html:image/html-->
 <img id="i446" src="https://i.imgur.com/jhQSUm6.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
