--- a/NESCAFE/cube_02.html
+++ b/NESCAFE/cube_02.html
@@ -913,11 +913,11 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Ayúdanos a que tus cápsulas, revivan.</div>
+<div id="i14">Dale a tus cápsulas una nueva vida.</div>
 <!--#/#--><!--#i4.i440.image.html:image/html-->
 <img id="i440" src="https://i.imgur.com/jhQSUm6.png"/>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/PQoMWwr.jpg"/>
+<img id="i130" src="https://i.imgur.com/DaAq5yk.jpg"/>
 <!--#/#--><!--#i4.i468.image.html:image/html-->
 <img id="i468" src="https://i.imgur.com/W84yU9m.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -937,7 +937,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i336.image.html:image/html-->
 <img id="i336" src="https://i.imgur.com/qtzROsO.jpg"/>
 <!--#/#--><!--#i5.i278.text.html:text/html-->
-<div id="i278">Haz que tus cápsulas, vuelvan al inicio.</div>
+<div id="i278">Conoce los puntos de recolección.</div>
 <!--#/#--><!--#i5.i470.image.html:image/html-->
 <img id="i470" src="https://i.imgur.com/W84yU9m.png"/>
 <!--#/#--><!--#i5.i474.image.html:image/html-->
